--- a/css/style.css
+++ b/css/style.css
@@ -174,3 +174,64 @@ input:checked+.slider-db:before {
 .slider-db.round-db:before {
   border-radius: 50%;
 }
+
+
+.switch-tt {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 24px;
+}
+
+.switch-tt input {
+  display: none;
+}
+
+.slider-tt {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #EA6262;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider-tt:before {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked+.slider-tt {
+  background-color: #009a7f;
+}
+
+input:focus+.slider-tt {
+  box-shadow: 0 0 1px #CCAF0B;
+}
+
+input:checked+.slider-tt:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+
+.slider-tt.round-tt {
+  border-radius: 34px;
+}
+
+.slider-tt.round-tt:before {
+  border-radius: 50%;
+}
+
