--- a/css/admin-style.css
+++ b/css/admin-style.css
@@ -3,18 +3,20 @@
 	border:1px #cccccc solid;
 }
 
-#form {
+#main-form {
     margin-left: 22px;
     margin-right: 22px;
 }
 
+td {
+    width: 76%;
+}
 
 .tooltip {
    	display: inline;
     position: relative;
 }
 		
-
 .tooltip:hover:after{
     background: #333;
     background: rgba(0,0,0,.8);
@@ -28,8 +30,7 @@
     z-index: 98;
     width: 280px;
 }
-
-		
+	
 .tooltip:hover:before{
     border: solid;
     border-color: #333 transparent;
@@ -39,4 +40,32 @@
     left: 50%;
     position: absolute;
     z-index: 99;
+}
+
+.active {
+    background: #fff;
+    color: #444;
+}
+
+#progress, .successModal {
+    display: block;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    height: auto;
+    padding-top: 5px;
+    padding-right: 30px;
+    padding-bottom: 5px;
+    padding-left: 30px;
+    border: 1px solid #3CB371;
+    background-color: #fff;
+    z-index: 1000;
+    overflow: auto;
+    transform: translate(-50%, -50%);
+    border-radius: 15px;
+    -moz-border-radius: 15px; 
+    -webkit-border-radius: 15px;
+    box-shadow: 5px 5px 10px #cfcfcf;
+    -moz-box-shadow: 5px 5px 10px #cfcfcf;
+    -webkit-box-shadow: 5px 5px 10px #cfcfcf;
 }
