--- a/css/admin-style.css
+++ b/css/admin-style.css
@@ -1,6 +1,9 @@
 #form_area {
-	background-color:#FFFFFF;
-	border:1px #cccccc solid;
+    background-color:#FFFFFF;
+    border-top: solid 1px #ffffff;
+    border-bottom: solid 1px #ccc;
+    border-left: solid 1px #ccc;
+    border-right: solid 1px #ccc;
 }
 
 #main-form {
@@ -8,8 +11,12 @@
     margin-right: 22px;
 }
 
+p.nav-container {
+    min-width: 100%;
+}
+
 td {
-    width: 76%;
+    width: 75%;
 }
 
 .tooltip {
@@ -43,8 +50,11 @@ td {
 }
 
 .active {
-    background: #fff;
     color: #444;
+    margin-bottom: -1px;
+    box-shadow: none;
+    background: #fff none repeat scroll 0 0;
+    border-bottom: 1px solid #fff;
 }
 
 #progress, .successModal {
