--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -83,3 +83,107 @@ td {
     -moz-box-shadow: 5px 5px 10px #cfcfcf;
     -webkit-box-shadow: 5px 5px 10px #cfcfcf;
 }
+
+.coffee-box {
+    padding: 15px 5px 15px 15px;
+    border: 1px solid #4CAF50;
+    padding-left: 13%;
+    background: url(../images/coffee.svg) no-repeat;
+    border-radius: 3px;
+    background-position: 30px center;
+    margin: 30px 0 15px 0;
+    background-size: 84px;
+}
+.coffee-box .coffee-amt {
+    width: 120px;
+    padding: 5px;
+    height: auto;
+    font-size: 1.5em;
+}
+.coffee-amt-wrap{
+    float: right;
+    margin: 0 30px;
+}
+
+.coffee-heading {
+    color: #23282d;
+    font-size: 1.3em;
+    margin: 1em 0;
+    display: block;
+    font-weight: 600;
+}
+
+h1.title .title-count {
+    font-size: 10px;
+    padding: 2px 8px;
+    opacity: 0.7;
+}
+
+.top-sharebar {
+    position: absolute;
+    right: 0;
+    top: 24px;
+    padding-right: 20px;
+}
+
+.top-sharebar > * {
+    vertical-align: middle;
+    margin-left: 10px;
+    float: right;
+}
+
+.share-text {
+    font-size: 10px;
+    text-align: right;
+    line-height: 1.5;
+    margin-right: 5px;
+    color: #838383;
+}
+.share-btn {
+    background: #333;
+    color: #fff;
+    text-decoration: none;
+    padding: 2px 10px;
+    border-radius: 2em;
+    font-size: 12px;
+    line-height: 2em;
+}
+
+.share-btn:hover {
+    opacity: 0.5;
+    color: #fff;
+}
+
+.share-btn:active, .share-btn:focus {
+    color: #fff;
+}
+
+.share-btn .dashicons {
+    font-size: 14px;
+    margin: 5px 2px 0 0;
+    height: 14px;
+}
+
+.share-btn.twitter {
+    background-color: #2196F3;
+}
+
+.share-btn.googleplus {
+    background-color: #dd4b39;
+}
+
+.share-btn.rate-btn .dashicons {
+    color: #FF9800;
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  
+    .coffee-box, .top-sharebar {
+        display: none;
+    }
+    
+}
+
+input, select, textarea {
+    border-radius: 3px;
+}
