--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -18,6 +18,7 @@ td {
 .tooltip {
    	display: inline;
     position: relative;
+    cursor: help;
 }
 		
 .tooltip:hover:after{
@@ -82,6 +83,11 @@ td {
     box-shadow: 5px 5px 10px #cfcfcf;
     -moz-box-shadow: 5px 5px 10px #cfcfcf;
     -webkit-box-shadow: 5px 5px 10px #cfcfcf;
+}
+
+.selectize-control {
+    display: inline-block;
+    vertical-align: middle;
 }
 
 .coffee-box {
