--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -50,7 +50,7 @@ td {
 
 .switch {
   position: relative;
-  display: inline-block;
+  display: inline-block !important;
   width: 40px;
   height: 20px;
 }
@@ -59,7 +59,7 @@ td {
   display: none;
 }
 
-.slider {
+.cb-slider {
   position: absolute;
   cursor: pointer;
   top: 0;
@@ -71,7 +71,7 @@ td {
   transition: .4s;
 }
 
-.slider:before {
+.cb-slider:before {
   position: absolute;
   content: "";
   height: 12px;
@@ -83,25 +83,25 @@ td {
   transition: .4s;
 }
 
-input:checked+.slider {
+input:checked+.cb-slider {
   background-color: #3CB371;
 }
 
-input:focus+.slider {
+input:focus+.cb-slider {
   box-shadow: 0 0 1px #3CB371;
 }
 
-input:checked+.slider:before {
+input:checked+.cb-slider:before {
   -webkit-transform: translateX(20px);
   -ms-transform: translateX(20px);
   transform: translateX(20px);
 }
 
-.slider.round {
+.cb-slider.round {
   border-radius: 34px;
 }
 
-.slider.round:before {
+.cb-slider.round:before {
   border-radius: 50%;
 }
 
