--- a/admin/assets/css/edit-v2.css
+++ b/admin/assets/css/edit-v2.css
@@ -1,5 +1,5 @@
 .tm-jjm, .tm-aam, .tm-hhm, .tm-mnm {
-    font-size: 12px;
+    font-size: 14px !important;
     line-height: 1.16666666 !important;
     vertical-align: middle;
     text-align: center;
@@ -13,7 +13,7 @@
 #timestampmodifieddiv select { 
     vertical-align: top;
     font-size: 12px;
-    line-height: 1.5;
+    line-height: 2.4;
 }
 
 #aam, #hhm, #jjm, #mnm {
