--- a/assets/css/admin.sass
+++ b/assets/css/admin.sass
@@ -6,6 +6,7 @@
   background: #fff
   border-bottom: 1px solid #ccd0d4
   padding-top: 10px
+  position: -webkit-sticky
   position: sticky
   z-index: 99
   top: 32px
@@ -601,8 +602,8 @@ h1.title .title-count
   background: #333
   color: #fff
   text-decoration: none
-  padding: 2px 10px
-  border-radius: 2em
+  padding: 2px 10px 2px 8px
+  border-radius: 5px
   font-size: 12px
   line-height: 2em
 
