--- a/assets/css/admin.sass
+++ b/assets/css/admin.sass
@@ -116,7 +116,7 @@ input.wplmi-form-control:read-only
   cursor: pointer
 
 textarea.wplmi-form-control:not(.selectize-control):not(.selectize-dropdown)
-  width: 95% !important
+  width: 96% !important
 
 .wplmi-form-control.expand:not(.selectize-control)
   width: 60% !important
@@ -391,10 +391,10 @@ hr
 .jconfirm-buttons
   text-align: center !important
 
-.settings_page_wp-last-modified-info #wpfooter
-  padding: 15px 20px
-  border-top: 1px solid #b5bfc9
-  background: #fff
+// .settings_page_wp-last-modified-info #wpfooter
+//   padding: 15px 20px
+//   border-top: 1px solid #b5bfc9
+//   background: #fff
 
 .wplmi-footer
   font-style: italic
