--- a/assets/css/admin.sass
+++ b/assets/css/admin.sass
@@ -98,6 +98,9 @@
       margin-left: 0.4rem
     
 .wplmi-form-control
+  &.wplmi-form-el.selectize-control
+    padding: 0 !important
+
   &:not(.wplmi-editor)
     width: 40%
     padding: 6px 12px !important
@@ -105,6 +108,9 @@
 
     @media screen and (max-width: 782px)
       width: 95% !important
+
+  &.selectize-dropdown
+    padding: 0 !important
 
   &:focus, &:hover
     border-color: #ccc !important
@@ -122,7 +128,9 @@ textarea.wplmi-form-control:not(.selectize-control):not(.selectize-dropdown)
   width: 60% !important
 
 .selectize-input
-  padding: 8px 12px 5px !important
+  padding: 8px 8px 5px !important
+  box-shadow: none !important
+  border-color: #ccc
 
   &:not(.has-items)
     padding: 13px 15px !important
@@ -130,8 +138,9 @@ textarea.wplmi-form-control:not(.selectize-control):not(.selectize-dropdown)
 select.wplmi-form-control
   background-position: right 13px top 55% !important
 
-.selectize-control.multi .selectize-input > div
-  padding: 5px 25px 5px 12px !important
+.selectize-control.multi .selectize-input > .item
+  padding: 5px 2px 5px 12px !important
+  border-radius: 3px
 
 div.description
   font-size: .79rem !important
